--- a/silent-payments-workshop.ipynb
+++ b/silent-payments-workshop.ipynb
@@ -95,13 +95,11 @@
    "source": [
     "## Simple case\n",
     "\n",
-    "Alice publishes a public key *A* as her silent payment address. Bob selects an input *B,b* and tweaks Alice's public key to create a destination public key *D* in the following way: \n",
+    "Bob wishes to receive payments from Alice, so he publishes his public key B as a silent payment address. Alice selects a UTXO with private key a and public key A from her wallet to fund the transaction and creates the output P for Bob in the following way:\n",
     "\n",
-    "* Let *D = HASH(b·A)·G + A* \n",
+    "* Let *P = HASH(a·B)·G + B*\n",
     "\n",
-    "Bob constructs a transaction in the normal way with *B* as an input and *D* as the destination address. Alice detects this payment by computing:\n",
-    "\n",
-    "* Let *D = HASH(a·B)·G + A* (Diffie-Hellman Key Exchange)."
+    "Bob detects this payment by computing *P = HASH(b·A)·G + B*, since *a·B == b·A* (Elliptic Curve Diffie-Hellman)."
    ]
   },
   {
@@ -114,17 +112,17 @@
     "b, B = generate_bip340_key_pair()\n",
     "a, A = generate_bip340_key_pair()\n",
     "\n",
-    "# Bob generates the output using his private key b and Alice's public key\n",
+    "# Alice generates the output using her private key b and Bob's public key\n",
     "# sha256(a * B)\n",
     "t = \n",
     "\n",
     "# create a pubkey: T = t * G\n",
     "T = \n",
     "\n",
-    "# create the silent payment output: D = T + A\n",
+    "# create the silent payment output: D = T + B\n",
     "D = \n",
     "\n",
-    "# Alice checks if D is hers using her private key and Bob's public key\n",
+    "# Bob checks if D is hers using her private key and Bob's public key\n",
     "t_prime = \n",
     "T_prime = \n",
     "D_prime = \n",
@@ -139,20 +137,21 @@
    "source": [
     "### Sending to more than one output\n",
     "\n",
-    "For additional privacy, Bob can derive multiple outputs for Alice in the following manner:\n",
-    "\n",
-    "* Let *D<sub>0</sub> = HASH(b·A \\|\\| 0)·G + A*\n",
-    "    * This is defined as the *0-tweaked address*\n",
-    "* For additional outputs:\n",
-    "    * Let *D<sub>i</sub> = HASH(b·A \\|\\| n)·G + A*, where *n* starts from 1 and is incremented for each subsequent output\n",
-    "\n",
-    "Alice detects this output the same as before by searching for *D<sub>0</sub> = HASH(a·B \\|\\| 0)·G + A*. Once she detects the *0-tweaked address*, she must:\n",
-    "\n",
-    "* Check for *D<sub>1</sub> = HASH(B·a \\|\\| 1)·G + A*\n",
-    "    * If *D<sub>1</sub>* is not found, she  is done\n",
-    "* If *D<sub>1</sub>* is found, she continues to check for *D<sub>2</sub>* and so on until an output is not found\n",
-    "\n",
-    "Since Alice will only perform these subsquent checks after a transaction with a *0-tweaked address* paying her is found, the increase to her overall scanning requirement is negligible."
+    "<p>In the event Alice needs more than one output for Bob, she can do so in the following manner:</p>\n",
+    "<ul>\n",
+    "<li>Let <em>P<sub>0</sub> = HASH(a·B || 0)·G + B</em></li>\n",
+    "<li>For additional outputs:\n",
+    "<ul>\n",
+    "<li>Let <em>P<sub>i</sub> = HASH(a·B || n)·G + B</em>, where <em>n</em> starts from 1 and is incremented for each subsequent output</li>\n",
+    "</ul></li>\n",
+    "</ul>\n",
+    "<p>Bob detects this output the same as before by searching for <em>P<sub>0</sub> = HASH(b·A || 0)·G + B</em>. Once he detects the first output, he must:</p>\n",
+    "<ul>\n",
+    "<li>Check for <em>P<sub>1</sub> = HASH(b·A || 1)·G + B</em></li>\n",
+    "<li>If <em>P<sub>1</sub></em> is not found, stop</li>\n",
+    "<li>If <em>P<sub>1</sub></em> is found, continue to check for <em>P<sub>2</sub></em> and so on until an additional output is not found</li>\n",
+    "</ul>\n",
+    "<p>Since Bob will only perform these subsquent checks after a transaction with at least one output paying him is found, the increase to his overall scanning requirement is negligible.</p>\n"
    ]
   },
   {
@@ -162,10 +161,11 @@
    "source": [
     "## Preventing address reuse\n",
     "\n",
-    "If Bob were to use a different UTXO from the same public key *B* for a subseqent payment, he would end up deriving the same destination for Alice. To prevent this, Bob must include a hash of the outpoint in the following manner:\n",
-    "\n",
-    "* Let *outpoint_hash = HASH(txid \\|\\| vout)* \n",
-    "* Let *D<sub>0</sub> = HASH(outpoint_hash·b·A)·G + A*\n"
+    "<p>If Alice were to use a different UTXO from the same public key <em>A</em> for a subsequent payment to Bob, she would end up deriving the same destination <em>P</em>. To prevent this, Alice should include a hash of the outpoint in the following manner:</p>\n",
+    "<ul>\n",
+    "<li>Let <em>outpoint_hash = HASH(txid || vout)</em></li>\n",
+    "<li>Let <em>P<sub>0</sub> = HASH(outpoint_hash·a·B || 0)·G + B</em></li>\n",
+    "</ul>"
    ]
   },
   {
@@ -177,21 +177,24 @@
    "source": [
     "# calculate the outpoint hash\n",
     "\n",
-    "txid = b'f4184fc596403b9d638783cf57adfe4c75c605f6356fbc91338530e9831e9e16'\n",
-    "vout = (0).to_bytes(4, 'little')\n",
+    "txid1 = b'f4184fc596403b9d638783cf57adfe4c75c605f6356fbc91338530e9831e9e16'\n",
+    "txid2 = b'a1075db55d416d3ca199f55b6084e2115b9345e16c5cf302fc80e9d5fbf5d48d'\n",
+    "vout1 = (0).to_bytes(4, 'little')\n",
+    "vout2 = (1).to_bytes(4, 'little')\n",
     "\n",
     "# sha256(txid || vout)\n",
+    "# TODO: these should be sorted\n",
     "outpoint_hash = \n",
     "\n",
     "t = \n",
-    "T = \n",
-    "D = \n",
+    "T = t * G\n",
+    "D = T + B\n",
     "\n",
-    "# Alice scans..\n",
+    "# Bob scans..\n",
     "\n",
     "t_prime = \n",
-    "T_prime = \n",
-    "D_prime = \n",
+    "T_prime = t_prime * G\n",
+    "D_prime = T_prime + B\n",
     "\n",
     "assert D == D_prime"
    ]
@@ -203,15 +206,14 @@
    "source": [
     "### Using all inputs\n",
     "\n",
-    "In our simplified example we have been referring to Bob's transactions as having only one input *B*, but in reality a Bitcoin transaction can have many inputs. This complicates our protocol by forcing Bob to choose a particular input and requires Alice to check each input for each transaction. \n",
-    "\n",
-    "We can simplify things by requiring Bob to tweak Alice's public key *A* with the sum of his input private keys:\n",
-    "\n",
-    "* Let *outpoints_hash = HASH(txid<sub>1</sub> \\|\\| vout<sub>1</sub> \\|\\| .. txid<sub>n</sub> \\|\\| vout<sub>n</sub>)*\n",
-    "* Let *inputs<sub>priv</sub> = i<sub>1</sub> + i<sub>2</sub> .. + i<sub>n</sub>*\n",
-    "* Let *D<sub>0</sub> = HASH(outpoints_hash·inputs<sub>priv</sub>·A)·G + A*\n",
-    "\n",
-    "Alice now only needs to compute one tweak per transaction with the sum of the inputs, instead of computing a tweak per input."
+    "<p>In our simplified example we have been referring to Alice’s transactions as having only one input <em>A</em>, but in reality a Bitcoin transaction can have many inputs. Instead of requiring Alice to pick a particular input and requiring Bob to check each input separately, we can instead require Alice to perform the tweak with the sum of the input public keys. This significantly reduces Bob's scanning requirement, makes light client support more feasible, and protects Alice's privacy in collaborative transaction protocols such as CoinJoin.</p>\n",
+    "<p>Alice performs the tweak with the sum of her input private keys in the following manner:</p>\n",
+    "<ul>\n",
+    "<li>Let <em>outpoints_hash = HASH(txid<sub>1</sub> || vout<sub>1</sub> || … txid<sub>n</sub> || vout<sub>n</sub>)</em></li>\n",
+    "<li>Let <em>a = a<sub>0</sub> + a<sub>1</sub> … + a<sub>n</sub></em></li>\n",
+    "<li>Let <em>A = A<sub>0</sub> + A<sub>1</sub> … + A<sub>n</sub></em></li>\n",
+    "<li>Let <em>P<sub>0</sub> = HASH(outpoints_hash·a·B || 0)·G + B</em></li>\n",
+    "</ul>\n"
    ]
   },
   {
@@ -225,26 +227,26 @@
     "txid1 = b'f4184fc596403b9d638783cf57adfe4c75c605f6356fbc91338530e9831e9e16'\n",
     "vout1 = (0).to_bytes(4, 'little')\n",
     "\n",
-    "b1 = ECKey().generate()\n",
-    "B1 = b1.get_pubkey()\n",
+    "a1 = ECKey().generate()\n",
+    "A1 = a1.get_pubkey()\n",
     "\n",
     "# taproot UTXO\n",
-    "txid2 = b'f4184fc596403b9d638783cf57adfe4c75c605f6356fbc91338530e9831e9e16'\n",
+    "txid2 = b'a1075db55d416d3ca199f55b6084e2115b9345e16c5cf302fc80e9d5fbf5d48d'\n",
     "vout2 = (0).to_bytes(4, 'little')\n",
     "\n",
-    "b2, B2 = generate_bip340_key_pair()\n",
+    "a2, A2 = generate_bip340_key_pair()\n",
     "\n",
     "outpoint_hash = sha256(txid1 + vout1 + txid2 + vout2)\n",
     "\n",
-    "# sha256(outputpoint_hash * Sum of Bob's input privkeys * A)\n",
+    "# sha256(outputpoint_hash * Sum of Alice's input privkeys * B)\n",
     "t = \n",
     "T = t * G\n",
-    "D = T + A\n",
+    "D = T + B\n",
     "\n",
-    "# alice\n",
+    "# Bob scans...\n",
     "t_prime = \n",
     "T_prime = t_prime * G\n",
-    "D_prime = T_prime + A\n",
+    "D_prime = T_prime + B\n",
     "\n",
     "assert D_prime == D"
    ]
@@ -256,18 +258,11 @@
    "source": [
     "### Spend and Scan Key\n",
     "\n",
-    "Since Alice needs *a* to check for incoming payments, this requires her private key to be unencrypted in an online device. To mitigate this, Alice can instead publish an address of the form *(A<sub>spend</sub>, A<sub>scan</sub>)* where both are BIP340 public keys and Alice controls both private keys *a<sub>spend</sub>,a<sub>scan</sub>*.\n",
-    "\n",
-    "This allows Alice to keep *a<sub>spend</sub>* in offline cold storage and perform the scanning with the public key *A<sub>spend</sub>* and private key *a<sub>scan</sub>*. \n",
-    "\n",
-    "Bob performs the tweak using both of Alice's public keys in the following manner:\n",
-    "\n",
-    "* Let *D<sub>0</sub> = HASH(outpoints_hash·inputs<sub>priv</sub>·A<sub>scan</sub>)·G + A<sub>spend</sub>*\n",
-    "\n",
-    "Alice detects this payment by calculating:\n",
-    "\n",
-    "* *D<sub>0</sub> = HASH(outpoints_hash·inputs<sub>pub</sub>·a<sub>scan</sub>)·G + A<sub>spend</sub>*\n",
-    "* Spendable with *a<sub>spend</sub> + HASH(outpoints_hash·inputs<sub>pub</sub>·a<sub>scan</sub>) mod P* as the private key.\n"
+    "<p>Since Bob needs his private key <em>b</em> to check for incoming payments, this requires <em>b</em> to be exposed to an online device. To minimize the risks involved, Bob can instead publish an address of the form <em>(B<sub>scan</sub>, B<sub>spend</sub>)</em>. This allows Bob to keep <em>b<sub>spend</sub></em> in offline cold storage and perform the scanning with the public key <em>B<sub>spend</sub></em> and private key <em>b<sub>scan</sub></em>. Alice performs the tweak using both of Bob’s public keys in the following manner:</p>\n",
+    "<ul>\n",
+    "<li>Let <em>P<sub>0</sub> = HASH(outpoints_hash·a·B<sub>scan</sub> || 0)·G + B<sub>spend</sub></em></li>\n",
+    "</ul>\n",
+    "<p>Bob detects this payment by calculating <em>P<sub>0</sub> = HASH(outpoints_hash·b<sub>scan</sub>·A)·G + B<sub>spend</sub></em> with his online device and can spend from his cold storage signing device using <em>(HASH(outpoints_hash·b<sub>scan</sub>·A) + b<sub>spend</sub>) mod p</em> as the private key.</p>\n"
    ]
   },
   {
@@ -277,31 +272,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a_scan, A_scan = generate_bip340_key_pair()\n",
-    "a_spend, A_spend = generate_bip340_key_pair()\n",
+    "b_scan, B_scan = generate_bip340_key_pair()\n",
+    "b_spend, B_spend = generate_bip340_key_pair()\n",
     "\n",
     "# doesn't have to be a taproot UTXO\n",
     "txid1 = b'f4184fc596403b9d638783cf57adfe4c75c605f6356fbc91338530e9831e9e16'\n",
     "vout1 = (0).to_bytes(4, 'little')\n",
     "\n",
-    "b1 = ECKey().generate()\n",
-    "B1 = b1.get_pubkey()\n",
+    "a1 = ECKey().generate()\n",
+    "A1 = a1.get_pubkey()\n",
     "\n",
     "# taproot UTXO\n",
     "txid2 = b'f4184fc596403b9d638783cf57adfe4c75c605f6356fbc91338530e9831e9e16'\n",
     "vout2 = (0).to_bytes(4, 'little')\n",
     "\n",
-    "b2, B2 = generate_bip340_key_pair()\n",
+    "a2, A2 = generate_bip340_key_pair()\n",
     "\n",
     "outpoint_hash = sha256(txid1 + vout1 + txid2 + vout2)\n",
     "\n",
-    "# sha256(outpoint_hash * sum of bob's privkeys * Alice's scan public key)\n",
+    "# sha256(outpoint_hash * sum of Alice's privkeys * Bob's scan public key)\n",
     "t = \n",
     "T = t * G\n",
-    "# add to Alice's spend public key\n",
+    "# add to Bob's spend public key\n",
     "D = \n",
     "\n",
-    "# alice\n",
+    "# Bob scans..\n",
     "t_prime = \n",
     "T_prime = t_prime * G\n",
     "D_prime = \n",
@@ -316,18 +311,17 @@
    "source": [
     "### Labels\n",
     "\n",
-    "For a single silent payment address of the form *(A<sub>spend</sub>,A<sub>scan</sub>)*, Alice may wish to differintiate incoming payments by using labels. Naively, Alice could publish multiple silent payment addresses, but this would require her to scan for each silent address, which becomes prohibitively expense.\n",
-    "\n",
-    "Instead, Alice can tweak the spend public key *A<sub>spend</sub>* with an integer *m* in the following way:\n",
-    "\n",
-    "* Let *A<sub>m</sub> = A<sub>spend</sub> + m·G*\n",
-    "* Publish *(A<sub>0</sub>, A<sub>scan</sub>)*, *(A<sub>1</sub>, A<sub>scan</sub>)*\n",
-    "\n",
-    "Bob performs the tweak same as before using one of the published *(A<sub>m</sub>,A<sub>scan</sub>)* pairs. Alice detects the labeled payment in the following manner:\n",
-    "\n",
-    "* Let *D = HASH(outpoints_hash·inputs<sub>pub</sub>·a<sub>scan</sub>)·G + A<sub>spend</sub>*\n",
-    "* Compute *D<sub>m</sub> = D + m·G* for each *m*\n",
-    "* For each *D<sub>m</sub>* in {*D<sub>0</sub> .. D<sub>m</sub>*}, check if they are present in the transaction outputs"
+    "<p>For a single silent payment address of the form <em>(B<sub>scan</sub>, B<sub>spend</sub>)</em>, Bob may wish to differentiate incoming payments by using labels. Naively, Bob could publish multiple silent payment addresses, but this would require him to scan for each one, which becomes prohibitively expensive. Instead, Bob can tweak his spend public key <em>B<sub>spend</sub></em> with an integer <em>m</em> in the following way:</p>\n",
+    "<ul>\n",
+    "<li>Let <em>B<sub>m</sub> = B<sub>spend</sub> + m·G</em></li>\n",
+    "<li>Publish <em>(B<sub>scan</sub>, B<sub>0</sub>)</em>, <em>(B<sub>scan</sub>, B<sub>1</sub>) …</em></li>\n",
+    "</ul>\n",
+    "<p>Alice performs the tweak same as before using one of the published <em>(B<sub>scan</sub>, B<sub>m</sub>)</em> pairs. Bob detects the labeled payment in the following manner:</p>\n",
+    "<ul>\n",
+    "<li>Let <em>P<sub>0</sub> = HASH(outpoints_hash·b<sub>scan</sub>·A || 0)·G + B<sub>spend</sub></em></li>\n",
+    "<li>Compute <em>P<sub>0m</sub> = P<sub>0</sub> + m·G</em> for each <em>m</em></li>\n",
+    "<li>For each <em>P<sub>0m</sub></em> in {<em>P<sub>00</sub> … P<sub>0m</sub></em>}, check if any are present in the transaction outputs</li>\n",
+    "</ul>"
    ]
   },
   {
@@ -337,45 +331,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a_scan, A_scan = generate_bip340_key_pair()\n",
-    "a_spend, A_spend = generate_bip340_key_pair()\n",
+    "b_scan, B_scan = generate_bip340_key_pair()\n",
+    "b_spend, B_spend = generate_bip340_key_pair()\n",
     "\n",
     "# create some labels\n",
     "labels = {\n",
-    "    'twitter': A_spend + ,\n",
-    "    'github': A_spend + ,\n",
-    "    'project a': A_spend + ,\n",
-    "    'project b': A_spend + ,\n",
+    "    'twitter': B_spend + ,\n",
+    "    'github': B_spend + ,\n",
+    "    'project a': B_spend + ,\n",
+    "    'project b': B_spend + ,\n",
     "}\n",
     "\n",
     "# doesn't have to be a taproot UTXO\n",
     "txid1 = b'f4184fc596403b9d638783cf57adfe4c75c605f6356fbc91338530e9831e9e16'\n",
     "vout1 = (0).to_bytes(4, 'little')\n",
     "\n",
-    "b1 = ECKey().generate()\n",
-    "B1 = b1.get_pubkey()\n",
+    "a1 = ECKey().generate()\n",
+    "A1 = a1.get_pubkey()\n",
     "\n",
     "# taproot UTXO\n",
     "txid2 = b'f4184fc596403b9d638783cf57adfe4c75c605f6356fbc91338530e9831e9e16'\n",
     "vout2 = (0).to_bytes(4, 'little')\n",
     "\n",
-    "b2, B2 = generate_bip340_key_pair()\n",
+    "a2, A2 = generate_bip340_key_pair()\n",
     "\n",
     "# Bob finds Alice's silent payment address through github and makes a payment\n",
-    "A_2 = labels['github']\n",
+    "B_2 = labels['github']\n",
     "\n",
     "outpoint_hash = sha256(txid1 + vout1 + txid2 + vout2)\n",
-    "t = sha256(outpoint_hash * (b1 + b2) * A_scan)\n",
+    "t = \n",
     "T = t * G\n",
     "D = \n",
     "\n",
-    "# alice\n",
-    "t_prime = sha256(outpoint_hash * a_scan * (B1 + B2))\n",
+    "# Bob scans..\n",
+    "t_prime = \n",
     "T_prime = t_prime * G\n",
     "\n",
     "D_prime = None\n",
     "for k,V in labels.items():\n",
-    "    \n",
     "        \n",
     "assert D_prime == D"
    ]
